# zombie-shooter

./: .gitignore  README.md  presentation.html
.claude/PRPs/: README.md
.claude/commands/: prp-commit.md  prp-debug.md  prp-issue-fix.md  prp-issue-investigate.md  prp-plan.md  (+6 more)
PRPs/: 001_topdown_mvp.md
presentation/: presentation.html
zombie-shooter/: .gitignore  Makefile  README.md  pyproject.toml
zombie-shooter/.claude/PRPs/reports/: topdown-zombie-shooter-mvp-report.md
zombie-shooter/scripts/: create_exploder_sprites.py  create_player_sprites.py  create_tank_sprites.py  generate_placeholder_sprites.py
zombie-shooter/src/game/: main.py
zombie-shooter/src/game/assets/: __init__.py  loader.py
zombie-shooter/src/game/core/: constants.py  game.py  scene.py
zombie-shooter/src/game/entities/: __init__.py  acid_projectile.py  blood_decal.py  blood_particle.py  bullet.py  dead_zombie.py  obstacle.py  pickup.py  player.py  zombie.py
zombie-shooter/src/game/scenes/: game_over.py  menu.py  play.py
zombie-shooter/src/game/systems/: animation.py  collisions.py  spawner.py  weapon_art.py
zombie-shooter/tests/: test_acid_projectile.py  test_animation.py  test_asset_loading.py  test_blood_decal.py  test_blood_particle.py  test_collisions.py  test_dead_zombie.py  test_exploder_variant.py  test_gore_edge_cases.py  test_gore_integration.py  test_gore_timing.py  test_hud.py  test_obstacle.py  test_pickup.py  test_pickup_spawning.py  test_player_integration.py  test_tank_variant.py  test_weapon_behavior.py  test_weapon_constants.py  test_zombie_integration.py
(+66 files in other folders)
